# runcolmap

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  align.cpp  align.h  exif.cpp  exif.h  main.copy  main.cpp
